<resources>
    <string name="app_name">炒股助手</string>
    <string name="splas_title">炒股变得更简单</string>
    <string name="site">仓位</string>
    <string name="mine">我的</string>
    <string name="add">新建</string>
    <string name="point">目标点</string>
    <string name="base_info">基本信息</string>
    <string name="name">股票名称</string>
    <string name="code">股票代码</string>
    <string name="point_transfrom">目标点/平移</string>
    <string name="totalPrice">总投入资金</string>
    <string name="appreciate">跌幅</string>
    <string name="pricebalance">资金配比</string>
    <string name="level1">第一梯队</string>
    <string name="level2">第二梯队</string>
    <string name="level3">第三梯队</string>
    <string name="nowprice">当前价位(买入点)</string>
    <string name="singlecount">单次股数</string>
    <string name="singleprice">单次投放金额</string>
    <string name="maxwin">最大赚数</string>
    <string name="maxloser">最大亏数</string>
    <string name="save">保存</string>
    <string name="phonenum">手机</string>
    <string name="updatepwd">修改密码</string>
    <string name="phonenumber">手机号</string>
    <string name="pwd">密码</string>
    <string name="checkversion">检测更新</string>
    <string name="loginout">退出登录</string>
    <string name="wareband1">波段[1]</string>
    <string name="wareband2">波段[2]</string>
    <string name="wareband3">波段[3]</string>
    <string name="update">修改</string>
    <string name="bl">1:1:3</string>
    <string name="login">登录</string>
    <string name="netfial">网络不可用</string>
    <string name="loginfial">登录失败</string>
    <string name="pwderror">密码错误</string>
    <string name="savepass">保存成功</string>
    <string name="nodata">暂无数据</string>
    <string name="totalcount">总股数</string>
    <string name="nologin">尚未登录</string>
    <string name="no100"> (不足100股,请核对)</string>
    <string name="bfb"> -26.5%</string>
    <string name="infonotwrite"> 信息输入不完整</string>
    <string name="balance_1"> 比例1</string>
    <string name="balance_2"> 比例2</string>
    <string name="balance_3"> 比例3</string>
    <string name="updateprice">修改买入价格</string>
    <string name="cancle">取消</string>
    <string name="sure">确认</string>
</resources>
