<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rel_topbyme"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ft_investment_style_last_arrow_normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="@string/save"
            android:textColor="@color/white"
            />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linear_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/gray_normal"
                android:gravity="center|left"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/base_info"
                    android:textColor="@color/black"
                    android:textSize="16dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/base_color_text_white"
                >

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center|left"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="14dp"/>

                <EditText
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:gravity="center|right"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/base_color_text_white"
                >

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center|left"
                    android:text="@string/code"
                    android:textColor="@color/black"
                    android:textSize="14dp"/>

                <EditText
                    android:id="@+id/tv_code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:gravity="center|right"
                    android:textColor="@color/black"
                    android:textSize="14dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/base_color_text_white"
                >

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center|left"
                    android:text="@string/point_transfrom"
                    android:textColor="@color/black"
                    android:textSize="14dp"/>

                <EditText
                    android:id="@+id/tv_point_transfrom"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:gravity="center|right"
                    android:textColor="@color/black"
                    android:textSize="14dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/base_color_text_white"
                >

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center|left"
                    android:text="@string/totalPrice"
                    android:textColor="@color/black"
                    android:textSize="14dp"/>

                <EditText
                    android:id="@+id/tv_totalPrice"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:gravity="center|right"
                    android:textColor="@color/black"
                    android:textSize="14dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/base_color_text_white"
                >

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center|left"
                    android:text="@string/appreciate"
                    android:textColor="@color/black"
                    android:textSize="14dp"/>

                <TextView
                    android:id="@+id/tv_appreciate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:gravity="center|right"
                    android:text="@string/bfb"
                    android:textColor="@color/black"
                    android:textSize="14dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/gray_normal"
                android:gravity="center|left"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center|left"
                    android:text="@string/pricebalance"
                    android:textColor="@color/black"
                    android:textSize="14dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/base_color_text_white"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center|left"
                    android:text="@string/pricebalance"
                    android:textColor="@color/black"
                    android:textSize="14dp"/>

                <TextView
                    android:id="@+id/tv_pricebalance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:gravity="center|right"
                    android:text="@string/bl"
                    android:textColor="@color/black"
                    android:textSize="14dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>