<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rel_topbyme"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ft_investment_style_last_arrow_normal"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/pricebalance"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:text="@string/save"
            android:textColor="@color/white"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/base_color_text_white"
        >

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center|left"
            android:text="@string/balance_1"
            android:textColor="@color/black"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/tv_balance_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center|right"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="14dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/base_color_text_white"
        >

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center|left"
            android:text="@string/balance_2"
            android:textColor="@color/black"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/tv_balance_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center|right"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="14dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/base_color_text_white"
        >

        <TextView
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center|left"
            android:text="@string/balance_3"
            android:textColor="@color/black"
            android:textSize="14dp"/>

        <EditText
            android:id="@+id/tv_balance_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="center|right"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="14dp"
            />
    </LinearLayout>
</LinearLayout>